# Blockchain

./: .dockerignore  .gitignore  Cargo.toml  README.md  deploy.sh
deployment/join/: Chart.yaml
kubernetes/: deployment.yaml
migrations/: 20250527205353_create_users_table.sql
node/: .dockerignore  Cargo.toml  Dockerfile  deploy.sh  stop.sh
node/deployment/database/: Chart.yaml  values.yaml
node/deployment/database/templates/: db-deployment.yaml
node/deployment/join/: Chart.yaml  values.yaml
node/deployment/join/templates/: join-deployment.yaml  service.yaml
node/deployment/open/: Chart.yaml  values.yaml
node/deployment/open/templates/: open-deployment.yaml  service.yaml
node/migrations/: 20250527205353_create_users_table.sql
node/src/: block.rs  block_validation_type.rs  blockchain.rs  constants.rs  init.rs  lib.rs  main.rs  mining_tasks.rs  node.rs  utils.rs  wallet.rs
node/src/args/: args.rs  mod.rs  mode.rs  node_type.rs
node/src/chain/: block.rs  block_validation_type.rs  blockchain.rs  mod.rs  transaction.rs  wallet.rs
node/src/database/: connection.rs  mod.rs  operations.rs  validator.rs
node/src/database/structs/: mod.rs  recipient_address.rs  user.rs
node/src/mining/: mining_reward.rs  mining_tasks.rs  mod.rs
node/src/network/: client.rs  message.rs  message_handler.rs  message_receiver.rs  message_sender.rs  mod.rs  network.rs  node.rs  peer.rs  tcp_connection.rs  ticket.rs
node/src/p2p/: message.rs  mod.rs  tcp_connection.rs
node/src/server/: mod.rs  server.rs
node/src/server/request/: transaction.rs
node/src/server/response/: create_user.rs  mod.rs  transaction_response.rs
node/src/tasks/: block_validation.rs  fork_handling.rs  genesis_tasks.rs  mod.rs  new_node_tasks.rs  peer_connection.rs
node/tests/: fork_tests.rs  happy_path_tests.rs  peer_discovery_tests.rs
node/tests/common/: mod.rs  utils.rs
src/: block.rs  blockchain.rs  main.rs  network.rs  node.rs  transaction.rs  utils.rs  wallet.rs
src/args/: args.rs  mod.rs  node_type.rs
src/database/: connection.rs  mod.rs
src/database/structs/: user.rs  user_balance.rs
src/network/: args.rs  command.rs  message.rs  mod.rs  network.rs  node.rs
src/server/: mod.rs  request_bodies.rs  server.rs  utils.rs
src/simulator/: add_node_modal.rs  block_modal.rs  blockchain_menu.rs  create_transaction_modal.rs  gui.rs  log.rs  log_panel.rs  logs.rs  mod.rs  node_menu.rs  sidebar.rs
wallet/: Cargo.toml
wallet/src/: main.rs  transaction.rs  wallet.rs
wallet/src/gui/: gui.rs  keys_modal.rs  mod.rs  transaction_form.rs  transaction_panel.rs
