[package]
name = "Blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-pre.5"
serde_json = "1.0.140"
hex = "0.4.3"
chrono = "0.4"
secp256k1 = { version = "0.30.0", features = ["rand", "global-context"] }
ripemd = "0.1.3"
eframe = "0.27"
