[package]
name = "Blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-pre.5"
serde_json = "1.0.140"
hex = "0.4.3"
chrono = "0.4"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
ripemd = "0.1.3"
eframe = "0.31.1"
log = "0.4.27"
uuid = { version = "1.16.0", features = ["v4"] }
libp2p = { version = "0.55.0", features = ["tcp", "yamux", "tokio", "noise", "ping"] }
tokio = { version = "1.25", features = ["full"] }
once_cell = "1.5"
pretty_env_logger = "0.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }