[package]
name = "MockChain"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-pre.5"
serde_json = "1.0.140"
hex = "0.4.3"
chrono = "0.4"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
ripemd = "0.1.3"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.25", features = ["full"] }
iroh = "0.34.1"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
axum = { version = "0.8.4", features = ["tokio", "http1"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.8"
mockall = "0.13.1"
async-trait = "0.1.88"