[package]
name = "blockchain_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.11.0-rc.0"
hex = "0.4.3"
anyhow = "1.0.98"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
ripemd = "0.1.3"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
eframe = "0.31.1"
